# chat-api

./: .gitignore  Cargo.toml  compose.yml  test.http
api/: Cargo.toml  Rocket.toml
api/src/: main.rs
listener/: Cargo.toml  Rocket.toml
listener/src/: main.rs
src/: main.rs
